kubernetes/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expiration-deply
    template:
        metadata:
            labels:
                app: expiration-deply
        spec:
            containers:
                - name: expirationcontainer1
                  image: mohamedaklamaash/expirationservice
