kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client-deply
  template:
    metadata:
      labels:
        app: client-deply
    spec:
      containers:
      - name: clientcontainer
        image: mohamedaklamaash/k8sclient-ticketing

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-deply
  ports:
  - port: 3000
    targetPort: 3000
