kubernetes/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order-dep
    template:
        metadata:
            labels:
                app: order-dep
        spec:
            containers:
                - name: ordercontainer1
                  image: mohamedaklamaash/k8sorderservice
---
apiVersion: v1
kind: Service
metadata:
    name: order-srv
spec:
    selector:
        app: order-dep
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
