kubernetes/order-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-mongo-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order-mongo
    template:
        metadata:
            labels:
                app: order-mongo
        spec:
            containers:
                - name: order-mongo-container
                  image: mongo

---
apiVersion: v1
kind: Service
metadata:
    name: order-mongo-srv
spec:
    selector:
      app: order-mongo
    ports:
      - name: order-mongo-db
        protocol: TCP
        port: 27017
        targetPort: 27017
