kubernetes/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payments-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: payments-dep
    template:
        metadata:
            labels:
                app: payments-dep
        spec:
            containers:
                - name: paymentscontainer1
                  image: mohamedaklamaash/paymentservice
---
apiVersion: v1
kind: Service
metadata:
    name: payments-srv
spec:
    selector:
        app: payments-dep
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
