kubernetes/ticketing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-dep
    template:
        metadata:
            labels:
                app: ticketing-dep
        spec:
            containers:
                - name: ticketingcontainer1
                  image: mohamedaklamaash/k8s-ticketing
---

apiVersion: v1
kind: Service
metadata:
    name: ticketing-srv
spec:
    selector:
        app: ticketing-dep
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
