kubernetes/ticketing-mongo-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-mongo-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-mongo
    template:
        metadata:
            labels:
                app: ticketing-mongo
        spec:
            containers:
                - name: ticketing-mongo-container
                  image: mongo

---
apiVersion: v1
kind: Service
metadata:
    name: ticketing-mongo-srv
spec:
    selector:
      app: ticketing-mongo
    ports:
      - name: ticketing-mongo-db
        protocol: TCP
        port: 27017
        targetPort: 27017
