kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: ticketing.dev
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: auth
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client
                            port:
                                number: 3000
